--- a/README
+++ b/README
@@ -2,7 +2,7 @@ sdllife - by Jeremy Allen
 
 Background
 ==
-The algorithm used is from Michael Abrash' Graphics Programming Black Book. This project was primarily to prototype code that will ultimately be used on an Arduino 16x16 Matrix display. However, I enjoyed hacking on this and figured I would release a modern version of Abrash's algorithm. This is probably one of the speediest implementations you will find with no fancy data structures.
+The algorithm used is from Michael Abrash' Graphics Programming Black Book. This project was primarily to prototype code that will ultimately be used on an Arduino 16x16 Matrix display. However, I enjoyed hacking on this and figured I would release a modern version of Abrash's algorithm. This is probably one of the speediest implementations you will find with no fancy data structures. (Caveat: this is a very clear implementation. Game of Life has been studied extensively and there are a lot of great and fast implementations, I like this algorithm for its simplicity and ability to run at > 60 fps on rather large boards on my machine with no real optimization)
 
 Requirements
 ==
